Rename the Nether spawn power

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -11,8 +11,8 @@
   "power.touhouorigins.common/strong_legs.description": "You are capable of jumping higher while sneaking, and running longer than a regular person. You take slightly less fall damage.",
   "power.touhouorigins.common/reclusive_physique.name": "Reclusive Physique",
   "power.touhouorigins.common/reclusive_physique.description": "You move slower than most people and deal 15% less melee damage.",
-  "power.touhouorigins.common/denizen_of_the_nether.name": "Denizen of the Nether",
-  "power.touhouorigins.common/denizen_of_the_nether.description": "You spawn in the Nether.",
+  "power.touhouorigins.common/denizen_of_hell.name": "Denizen of Hell",
+  "power.touhouorigins.common/denizen_of_hell.description": "You spawn in the Nether.",
 
   "origin.touhouorigins.vampire.name": "Vampire",
   "origin.touhouorigins.vampire.description": "A young but powerful species of youkai, considered to be a type of devil. They possess a far broader range of abilities than most youkai.",
