Add Oarfish (#21) + synergy power for Celestial

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -13,6 +13,8 @@
   "power.touhouorigins.common/reclusive_physique.description": "You move slower than most people and deal 15% less melee damage.",
   "power.touhouorigins.common/denizen_of_hell.name": "Denizen of Hell",
   "power.touhouorigins.common/denizen_of_hell.description": "You spawn in the Nether.",
+  "power.touhouorigins.common/heavenly_descendant.name": "Heavenly Descendant",
+  "power.touhouorigins.common/heavenly_descendant.description": "Damage you deal in the Nether is reduced by 80%.",
 
   "origin.touhouorigins.vampire.name": "Vampire",
   "origin.touhouorigins.vampire.description": "A young but powerful species of youkai, considered to be a type of devil. They possess a far broader range of abilities than most youkai.",
@@ -200,10 +202,24 @@
   "power.touhouorigins.celestial/state_of_enlightenment.description": "For 5 seconds, you can grant yourself Resistance V to become invincible to nearly all damage.",
   "power.touhouorigins.celestial/temper.name": "Temper",
   "power.touhouorigins.celestial/temper.description": "You can activate this power to empower your melee attacks for 10 seconds, making them disable shields and apply Weakness for 5 seconds.",
-  "power.touhouorigins.celestial/heavenly_descendant.name": "Heavenly Descendant",
-  "power.touhouorigins.celestial/heavenly_descendant.description": "Your damage in the Nether is reduced by 80%.",
+  "power.touhouorigins.celestial/match_made_in_heaven.name": "Match Made in Heaven",
+  "power.touhouorigins.celestial/match_made_in_heaven.description": "You gain increased swim speed, water breathing, and can run faster in rain while near an Oarfish. However, being in the range of another resident of Heaven gradually makes you homesick, giving you Slowness and 20% reduced melee damage. You can cure homesickness by standing under the open sky at altitudes of 200 or higher. Being in the Nether makes you homesick twice as fast.",
   "power.touhouorigins.celestial/lavish_lifestyle.name": "Lavish Lifestyle",
   "power.touhouorigins.celestial/lavish_lifestyle.description": "You refuse to eat food that is not craftable.",
+
+  "origin.touhouorigins.oarfish.name": "Oarfish",
+  "origin.touhouorigins.oarfish.description": "Known as messengers of the Dragon Palace, these youkai have the ability to borrow the Dragon God's power and are often seen as harbingers of impending earthquakes.",
+
+  "power.touhouorigins.oarfish/healing_torrent.name": "Healing Torrent",
+  "power.touhouorigins.oarfish/healing_torrent.description": "While in rain, you regenerate health at a rate of 1 per 2.5 seconds and move 20% faster.",
+  "power.touhouorigins.oarfish/thunder_lungs.name": "Thunder Lungs",
+  "power.touhouorigins.oarfish/thunder_lungs.description": "You can breathe underwater.",
+  "power.touhouorigins.oarfish/dragon_gods_wrath.name": "Dragon God's Wrath",
+  "power.touhouorigins.oarfish/dragon_gods_wrath.description": "After activating this power, your next attack summons a bolt of lightning to strike your target. This power has a long cooldown, but summoning a lightning bolt reduces most of it, with a greater reduction during thunderstorms. Additionally, you are immune to lightning damage.",
+  "power.touhouorigins.oarfish/match_made_in_heaven.name": "Match Made in Heaven",
+  "power.touhouorigins.oarfish/match_made_in_heaven.description": "Your luck attribute is increased by 5 when near a Celestial. However, being in the range of another resident of Heaven gradually makes you homesick, giving you Slowness and 20% reduced melee damage. You can cure homesickness by standing under the open sky at altitudes of 200 or higher. Being in the Nether makes you homesick twice as fast.",
+  "power.touhouorigins.oarfish/veils_like_water.name": "Veils Like Water",
+  "power.touhouorigins.oarfish/veils_like_water.description": "You have a water meter that depletes while you are out of water or when summoning lightning bolts. As it gets closer to empty, you will receive Hunger and Mining Fatigue. If it empties completely, you lose the ability to summon lightning bolts and will also receive Darkness. You can replenish your water meter by submerging yourself in water, standing in rain, or drinking water bottles.",
 
   "touhouorigins.subtitles.origin.fairy.heal": "Fairy regenerates",
   "touhouorigins.subtitles.origin.fairy.fly": "Fairy flutters",
@@ -219,6 +235,8 @@
   "touhouorigins.subtitles.origin.moon_rabbit.activate": "Moon Rabbit prepares to fire",
   "touhouorigins.subtitles.origin.celestial.enlightenment": "Celestial strengthens",
   "touhouorigins.subtitles.origin.celestial.temper": "Celestial empowers",
+  "touhouorigins.subtitles.origin.oarfish.dry": "Oarfish dries",
+  "touhouorigins.subtitles.origin.oarfish.prepare_lightning": "Oarfish electrifies",
 
   "death.attack.sun": "%1$s was vaporized",
   "death.attack.sun.player": "%1$s was vaporized whilst fighting %2$s",
