Give parrying a sound effect

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -230,6 +230,7 @@
   "touhouorigins.subtitles.origin.satori.close_eye": "Third eye closes",
   "touhouorigins.subtitles.origin.generic.gust": "Wind rushes",
   "touhouorigins.subtitles.origin.wolf_tengu.growl": "Wolf Tengu growls",
+  "touhouorigins.subtitles.origin.wolf_tengu.parry": "Wolf Tengu parries",
   "touhouorigins.subtitles.origin.vengeful_spirit.heal": "Vengeful Spirit regenerates",
   "touhouorigins.subtitles.origin.rabbit.hop": "Rabbit hops",
   "touhouorigins.subtitles.origin.moon_rabbit.activate": "Moon Rabbit prepares to fire",
