uᴉɓᴉɹo nʞɐꓩouɐɯⱯ ǝɥʇ ppⱯ

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -222,6 +222,22 @@
   "power.touhouorigins.oarfish/veils_like_water.name": "Veils Like Water",
   "power.touhouorigins.oarfish/veils_like_water.description": "You have a water meter that depletes while you are out of water or when summoning lightning bolts. As it gets closer to empty, you will receive Hunger and Mining Fatigue. If it empties completely, you lose the ability to summon lightning bolts and will also receive Darkness. You can replenish your water meter by submerging yourself in water, standing in rain, or drinking water bottles.",
 
+  "origin.touhouorigins.amanojaku.name": "Amanojaku",
+  "origin.touhouorigins.amanojaku.description": "Amanojaku are a particularly twisted type of youkai. They're the spirits of contradiction and perversity.",
+
+  "power.touhouorigins.amanojaku/turnabout.name": "Turnabout",
+  "power.touhouorigins.amanojaku/turnabout.description": "Flips the target player or mob upside down, including their view. When the effect ends, the target is slammed into the ground, causing fall damage.",
+  "power.touhouorigins.amanojaku/this_side_down.name": "This Side Down",
+  "power.touhouorigins.amanojaku/this_side_down.description": "While sneaking, you can freely flip yourself upside down and back again.",
+  "power.touhouorigins.amanojaku/mirror_movement.name": "Mirror Movement",
+  "power.touhouorigins.amanojaku/mirror_movement.description": "You can reverse the movement of a player or a mob.",
+  "power.touhouorigins.amanojaku/reverse_ideology.name": "Reverse Ideology",
+  "power.touhouorigins.amanojaku/reverse_ideology.description": "You gain half of your target's armor as additional melee damage, but your base melee damage is halved.",
+  "power.touhouorigins.amanojaku/cost_of_misfortune.name": "Cost of Misfortune",
+  "power.touhouorigins.amanojaku/cost_of_misfortune.description": "Your active abilities are powered by the damage inflicted on you; it is required for them to function.",
+  "power.touhouorigins.amanojaku/antagonist.name": "Antagonist",
+  "power.touhouorigins.amanojaku/antagonist.description": "Every mob capable of attacking is hostile towards you, and you are unable to tame animals.",
+
   "touhouorigins.subtitles.origin.fairy.heal": "Fairy regenerates",
   "touhouorigins.subtitles.origin.fairy.fly": "Fairy flutters",
   "touhouorigins.subtitles.origin.kappa.camouflage_activate": "Camouflage activates",
@@ -229,7 +245,7 @@
   "touhouorigins.subtitles.origin.kappa.dry": "Kappa dries",
   "touhouorigins.subtitles.origin.satori.recollect": "Satori recollects",
   "touhouorigins.subtitles.origin.satori.close_eye": "Third eye closes",
-  "touhouorigins.subtitles.origin.generic.gust": "Wind rushes",
+  "touhouorigins.subtitles.entity.generic.gust": "Wind rushes",
   "touhouorigins.subtitles.origin.wolf_tengu.growl": "Wolf Tengu growls",
   "touhouorigins.subtitles.origin.wolf_tengu.parry": "Wolf Tengu parries",
   "touhouorigins.subtitles.origin.vengeful_spirit.heal": "Vengeful Spirit regenerates",
@@ -239,6 +255,9 @@
   "touhouorigins.subtitles.origin.celestial.temper": "Celestial empowers",
   "touhouorigins.subtitles.origin.oarfish.dry": "Oarfish dries",
   "touhouorigins.subtitles.origin.oarfish.prepare_lightning": "Oarfish electrifies",
+  "touhouorigins.subtitles.entity.generic.flip": "Something flips",
+  "touhouorigins.subtitles.origin.amanojaku.flip": "Amanojaku flips",
+  "touhouorigins.subtitles.entity.generic.reverse": "Something reverses",
 
   "death.attack.sun": "%1$s was vaporized",
   "death.attack.sun.player": "%1$s was vaporized whilst fighting %2$s",
