Allow hiding Crow Tengu wings

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -97,7 +97,7 @@
   "power.touhouorigins.crow_tengu/gust_of_wind.name": "Gust of Wind",
   "power.touhouorigins.crow_tengu/gust_of_wind.description": "You can unleash the power of the wind to launch yourself in the direction you're looking.",
   "power.touhouorigins.crow_tengu/youkai_of_the_sky.name": "Youkai of the Sky",
-  "power.touhouorigins.crow_tengu/youkai_of_the_sky.description": "You have elytra flight without needing to equip any elytra.",
+  "power.touhouorigins.crow_tengu/youkai_of_the_sky.description": "You have elytra flight without needing to equip any elytra. You can hide your wings by toggling this power.",
   "power.touhouorigins.crow_tengu/flight_friendly_body.name": "Flight-Friendly Body",
   "power.touhouorigins.crow_tengu/flight_friendly_body.description": "You have 3 less hearts of health and cannot wear heavy armor.",
   "power.touhouorigins.crow_tengu/reporting_above_clouds.name": "Reporting Above Clouds",
